--- a/aframeTest.html
+++ b/aframeTest.html
@@ -6,6 +6,15 @@
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://quadjr.github.io/aframe-gaussian-splatting/index.js"></script>
 
+  <style>
+
+    body {
+      background-color: #000000;
+      height: 100vh;
+      margin: 0px;
+    }
+
+  </style>
   </head>
   <body>
     <a-scene renderer="antialias: false" stats>
