--- a/360viewer2.html
+++ b/360viewer2.html
@@ -6,7 +6,7 @@
 <body>
 <!-- 예시 비디오: https://www.w3schools.com/html/mov_bbb.mp4 -->
 <div id="viewer-container" style="width: 600px; aspect-ratio: 1/1; position: relative; background: black;">
-  <video id="product-video" style="width: 100%; height: 100%; object-fit: contain;" src="https://github.com/Seonghoon-ban/seonghoon-ban.github.io/blob/main/knit_sample.mp4" preload="auto"></video>
+  <video id="product-video" style="width: 100%; height: 100%; object-fit: contain;" src="knit_sample.mp4" preload="auto"></video>
   <div id="drag-layer" style="position:absolute; left:0;top:0;width:100%;height:100%;cursor: ew-resize;"></div>
 </div>
 
